 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)

INCOMPATIBLE CHANGES

IMPROVEMENTS

PIG-1722 PiggyBank AllLoader - Load multiple file formats in one load
statement (gerritjw via gates)

PIG-1502 Remove Owl as a contrib project (gates)

PIG-1386 UDF to extend functionalities of MaxTupleBy1stField (hcbusy via olgan)

PIG-1526 improvements to HiveColumnarLoader - Partitioning Support (gerritjvv via olgan)

PIG-1229 allow pig to write output into a JDBC db (ankur via hashutosh)

PIG-1385 UDF to create tuples and bags (hcbusy via gates)

PIG-1331 Add Owl as a contrib project (ajaykidave via gates)

OPTIMIZATIONS

BUG FIXES

PIG-1449 RegExLoader hangs on lines that don't match the regular expression
(Christian Hargraves via hashutosh)

PIG 0.7.0

INCOMPATIBLE CHANGES

IMPROVEMENTS

PIG-1310 
ISO Date UDFs: Conversion, Trucation and Date Math (piggybank) (rjurney via
gates)

PIG-1284 Added XMLLoader to piggybank (aloknsingh via gates)

OPTIMIZATIONS

BUG FIXES

Release 0.6.0

INCOMPATIBLE CHANGES

PIG-1126: updated fieldsToRead function for piggybank loaders (olgan)

IMPROVEMENTS

PIG-1015: [piggybank] DateExtractor should take into account timezones
(dryaboy via  olgan)

OPTIMIZATIONS

BUG FIXES

Release 0.5.0 - Released

INCOMPATIBLE CHANGES

IMPROVEMENTS

PIG-911: Added SequenceFileLoader to piggybank (dryaboy via gates)

OPTIMIZATIONS

BUG FIXES

Release 0.4.0 - Released

INCOMPATIBLE CHANGES

IMPROVEMENTS

PIG-885: New UDFs for piggybank (Bin, Decode, LookupInFiles, RegexExtract, RegexMatch, HashFVN, DiffDate) (daijy)

PIG-868: added strin manipulation functions to piggybank (bennies via olgan)

OPTIMIZATIONS

BUG FIXES

Release 0.3.0 - Released

INCOMPATIBLE CHANGES

IMPROVEMENTS
